# lillinput

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  lillinput.toml.sample
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: default.yml  release.yml  release_cli.yml  release_lib.yml
crates/lillinput/: Cargo.toml  README.md
crates/lillinput-cli/: Cargo.toml  README.md
crates/lillinput-cli/src/: main.rs  opts.rs  settings.rs  test_utils.rs  utils.rs
crates/lillinput-cli/src/actions/: commandaction.rs  mod.rs
crates/lillinput/src/: lib.rs  main.rs  settings.rs  test_utils.rs  utils.rs
crates/lillinput/src/actions/: commandaction.rs  controller.rs  errors.rs  i3action.rs  mod.rs
crates/lillinput/src/controllers/: defaultcontroller.rs  errors.rs  mod.rs
crates/lillinput/src/events/: defaultprocessor.rs  errors.rs  libinput.rs  mod.rs
src/: main.rs  opts.rs  settings.rs  test_utils.rs
src/actions/: commandaction.rs  controller.rs  errors.rs  i3action.rs  mod.rs
src/events/: errors.rs  libinput.rs  mod.rs
