[package]
name = "lillinput"
version = "0.2.1-alpha"
authors = ["Diego M. Rodríguez <diego@moreda.io>"]
edition = "2018"
description = "Connect libinput gestures to i3 and others"
repository = "https://github.com/diego-plan9/lillinput/"
license = "BSD-3-Clause"
keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
categories = ["command-line-utilities", "gui"]

[dependencies]
clap = { version = "=3.0.0-rc.7", features = ["derive"] }
config = "0.11.0"
filedescriptor = "0.8.1"
i3ipc = "0.10.1"
input = "0.7.1"
itertools = "0.10.1"
libc = "0.2.112"
log = "0.4.14"
serde = { version= "1.0.131", features = ["derive"] }
shlex = "1.1.0"
simplelog = "0.11.1"
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.0"
xdg = "2.4.0"
