[package]
name = "lillinput"
version = "0.2.1-alpha"
authors = ["Diego M. Rodríguez <diego@moreda.io>"]
edition = "2018"
description = "Connect libinput gestures to i3 and others"
repository = "https://github.com/diego-plan9/lillinput/"
license = "BSD-3-Clause"
keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
categories = ["command-line-utilities", "gui"]

[dependencies]
clap = { version = "~3.0", features = ["derive"] }
config = "~0.11"
filedescriptor = "~0.8"
i3ipc = "~0.10"
input = "~0.7"
itertools = "~0.10"
libc = "~0.2"
log = "~0.4"
serde = { version= "~1.0", features = ["derive"] }
shlex = "~1.1"
simplelog = "~0.11"
strum = { version = "~0.23", features = ["derive"] }
strum_macros = "~0.23"
xdg = "~2.4"

[dev-dependencies]
tempfile = "~3.3"
