[package]
name = "lillinput"
version = "0.2.1"
authors = ["Diego M. Rodríguez <diego@moreda.io>"]
edition = "2018"
description = "Connect libinput gestures to i3 and others"
repository = "https://github.com/diego-plan9/lillinput/"
license = "BSD-3-Clause"
keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
categories = ["command-line-utilities", "gui"]

[dependencies]
clap = { version = "~3.2.17", features = ["derive"] }
clap-verbosity-flag = "~1.0.1"
config = "~0.13.2"
filedescriptor = "~0.8"
i3ipc = "~0.10"
input = "~0.7"
itertools = "~0.10"
libc = "~0.2"
log = { version = "~0.4.17", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
shlex = "~1.1"
simplelog = "~0.12.0"
strum = { version = "~0.24", features = ["derive"] }
strum_macros = "~0.24"
xdg = "~2.4"

[dev-dependencies]
tempfile = "~3.3"
serial_test = "~0.9.0"
