[package]
name = "lillinput-cli"
version = "0.3.0-rc0"
authors = ["Diego M. Rodríguez <diego@moreda.io>"]
edition = "2021"
description = "Application for connecting libinput gestures to i3 and others"
repository = "https://github.com/diego-plan9/lillinput/"
license = "BSD-3-Clause"
keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
categories = ["command-line-utilities", "gui"]

[dependencies]
clap = { version = "~3.2.17", features = ["derive"] }
clap-verbosity-flag = "~1.0.1"
config = "~0.13.2"
i3ipc = "~0.10"
lillinput = { path = "../lillinput", version = "0.3.0-rc0" }
log = { version = "~0.4.17", features = ["serde"] }
serde = { version = "~1.0", features = ["derive"] }
simplelog = "~0.12.0"
strum = { version = "~0.24", features = ["derive"] }
strum_macros = "~0.24"
xdg = "~2.4"

[dev-dependencies]
tempfile = "~3.3"
serial_test = "~0.9.0"
