[package]
name = "lillinput"
version = "0.3.0-rc0"
authors = ["Diego M. Rodríguez <diego@moreda.io>"]
edition = "2021"
description = "Library for connecting libinput gestures to i3 and others"
repository = "https://github.com/diego-plan9/lillinput/"
license = "BSD-3-Clause"
keywords = ["i3", "touchpad", "x11", "libinput", "gestures"]
categories = ["command-line-utilities", "gui"]

[dependencies]
filedescriptor = "~0.8"
i3ipc = "~0.10"
input = "~0.7"
itertools = "~0.10"
libc = "~0.2"
log = { version = "~0.4.17" }
shlex = "~1.1"
strum = { version = "~0.24", features = ["derive"] }
strum_macros = "~0.24"
thiserror = "~1.0"

[dev-dependencies]
tempfile = "~3.3"
serial_test = "~0.9.0"
